@@ -22,6 +22,7 @@ ilDeleteImage
 ilDeleteImages
 ilDetermineType
 ilDetermineTypeF
+ilDetermineTypeL
 ilDisable
 ilEnable
 ilFormatFunc
